--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@
 }
 
 .zig-zag-top::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
@@ -34,7 +34,7 @@
 }
 
 .zig-zag-bottom::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -43,4 +43,30 @@
   background: linear-gradient(135deg, #fefce8 12px, transparent 0%),
     linear-gradient(-135deg, #fefce8 12px, transparent 0%);
   background-size: 30px;
+}
+
+.user-menu {
+  position: absolute;
+  width: 200px;
+  top: 50px;
+  right: 0;
+  display: none;
+  z-index: 100;
+  cursor: pointer;
+  background-color: lightyellow;
+  padding: 0.8rem;
+  border-radius: 8px;
+}
+
+.user-menu.show {
+  display: block;
+}
+
+.user-menu ul li {
+  margin-bottom: 0.4rem;
+  padding: 0.5rem 0;
+}
+
+.user-menu li:hover {
+  background-color: #f5f5f5;
 }
