--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,3 +70,53 @@
 .user-menu li:hover {
   background-color: #f5f5f5;
 }
+
+.chat-box {
+  height: calc(100vh - 10rem);
+  overflow-y: auto;
+  background: rgb(25, 25, 25);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.75rem;
+  color: white;
+  background: rgb(30, 30, 30);
+}
+
+.messages {
+  max-height: calc(100vh - 15rem);
+  overflow-y: auto;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  color: white;
+  background: #282828;
+  padding: 0.75rem;
+  border-radius: 5px;
+  align-self: flex-start;
+  max-width: 50%;
+  flex-grow: 0;
+}
+
+.message.self {
+  color: white;
+  background: #00bd9b;
+  align-self: flex-end;
+  flex-grow: 0;
+}
+
+.chat-input {
+  width: 100%;
+  background: rgb(30, 30, 30);
+  padding: 1rem;
+  align-self: flex-end;
+}
