--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,6 +45,38 @@
   background-size: 30px;
 }
 
+.chat-bg {
+  background-image: url('./../public/images/jackfruit-bg.jpg');
+}
+
+.header {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.potential-chat {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.contact-list {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  height: calc(100vh - 10rem);
+}
+
 .user-menu {
   position: absolute;
   width: 200px;
@@ -109,8 +141,8 @@
 }
 
 .message.self {
-  color: white;
-  background: #00bd9b;
+  color: #000;
+  background: #98fb98;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
